deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CIRCLE_PROJECT_REPONAME$HOST_ENV
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $CIRCLE_PROJECT_REPONAME$HOST_ENV
      component: backend
  template:
    metadata:
      labels:
        app: $CIRCLE_PROJECT_REPONAME$HOST_ENV
        component: backend
    spec:
      containers:
        - name: backend
          image: $K8S_CLUSTER_docker_registry_url/$SHORT/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1

          command: [node, packages/backend]
#          args: [--config, app-config.yaml, --config, f]
          args: [--config, app-config.yaml]

          ports:
            - name: http
              containerPort: 7000

          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/k8s-config.yaml
              subPath: k8s-config.yaml

          resources:
            limits:
              cpu: 1
              memory: 0.5Gi

          readinessProbe:
            httpGet:
              port: 7000
              path: /healthcheck
          livenessProbe:
            httpGet:
              port: 7000
              path: /healthcheck

      volumes:
        - name: config-volume
          configMap:
            name: $CIRCLE_PROJECT_REPONAME$HOST_ENV-config
            items:
              - key: app-config
                path: k8s-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $CIRCLE_PROJECT_REPONAME$HOST_ENV
spec:
  selector:
    app: $CIRCLE_PROJECT_REPONAME$HOST_ENV
    component: backend
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
  name: $CIRCLE_PROJECT_REPONAME$DEPLOY_VERSION
spec:
  rules:
    - host: $CIRCLE_PROJECT_REPONAME$DEPLOY_VERSION.k8s.bestcorp.net
      http:
        paths:
          - backend:
              serviceName: $CIRCLE_PROJECT_REPONAME$DEPLOY_VERSION
              servicePort: 80
  tls:
    - hosts:
        - $CIRCLE_PROJECT_REPONAME$DEPLOY_VERSION.k8s.bestcorp.net
      secretName: $CIRCLE_PROJECT_REPONAME$DEPLOY_VERSION-k8s-bestcorp-net-tls
